2005-06-05  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* libraries/javalib/gnu/java/nio/charset/iconv/IconvProvider.java
	(IconvProvider): Made the constructor public.

	* libraries/javalib/java/nio/charset/Charset.java
	(providers2): Allow spaces and comments in
	META-INF/services/java.nio.charset.spi.CharsetProvider.
	Load the provider using the context class loader.

2005-06-04  Helmer Kraemer  <hkraemer@freenet.de>

	* kaffe/kaffevm/jni/jni.c (Kaffe_FindClass): fixed so it works correctly	for native methods of system classes.

2005-06-02  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/jni/jni.c
	(Kaffe_ExceptionDescribe): Fixed variable declaration.

	* test/regression/ProcessClassInst.java,
	test/regression/ProcessClassStop.java: Checked in missing files.

2005-06-01  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/stackTrace.c
	(printStackTrace): Reformatted trace output.

	* kaffe/kaffevm/support.c
	(kprintf): Use vfprintf stored in kaffe VM arguments.

	* kaffe/kaffevm/jni/jni.c
	(Kaffe_ExceptionDescribe): Always print the stack trace using
	kaffe internal routines. That way we always get a stack trace when
	an exception is thrown.

	* test/regression/ProcessClassInst.java,
	test/regression/ProcessClassStop.java: Fixed expected output
	accordingly.
	
2005-05-31  Adam Heath  <doogie@brainfood.com>

	* kaffe/kaffevm/jni/jni.c,
	  libraries/clib/awt/classpath-gtk/gtk-peer/gnu_java_awt_peer_gtk_GtkFramePeer.c,
	  libraries/clib/fdlibm/dtoa.c, libraries/clib/fdlibm/mprec.c,
	  libraries/clib/fdlibm/strtod.c,
	  libraries/clib/nio/gnu_java_nio_VMSelector.c,
	  libraries/clib/nio/gnu_java_nio_charset_iconv_IconvDecoder.c,
	  libraries/clib/nio/gnu_java_nio_charset_iconv_IconvEncoder.c,
	  libraries/clib/nio/java_nio_VMDirectByteBuffer.c:
	  s/0/NULL/.

2005-05-31  Adam Heath  <doogie@brainfood.com>

	* scripts/GCCWarning.pm: Few more warnings added.

2005-05-31  Adam Heath  <doogie@brainfood.com>

	* include/Makefile.am, include/Makefile.am: